[MODORDERS-1141]. Fix sonar issues